--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,100 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
-</div>
+<section class="login">
+  <div class="container p-3">
+    <div class="forms">
+      <div class="form login">
+        <span class="title">Login</span>
 
-<script src="./js/login.js"></script>
+        <form action="#">
+          <div class="input-field">
+            <input
+              type="text"
+              id="email-login"
+              placeholder="Enter your email"
+              required
+            />
+            <i class="uil uil-envelope icon"></i>
+          </div>
+          <div class="input-field">
+            <input
+              type="password"
+              class="password"
+              id="password-login"
+              placeholder="Enter your password"
+              required
+            />
+            <i class="uil uil-lock icon"></i>
+            <i class="uil uil-eye-slash showHidePw"></i>
+          </div>
+
+          <div class="input-field button">
+            <input name="loginBtn" type="button" value="Login" />
+          </div>
+        </form>
+
+        <div class="login-signup">
+          <span class="text">Not a member?
+            <a href="#" class="text signup-link">Signup Now</a>
+          </span>
+        </div>
+      </div>
+
+      <!-- Registration Form -->
+      <div class="form signup">
+        <span class="title">Registration</span>
+
+        <form action="#">
+          <div class="input-field">
+            <input
+              type="text"
+              id="signUpName"
+              placeholder="Enter Username"
+              required
+            />
+            <i class="uil uil-user"></i>
+          </div>
+          <div class="input-field">
+            <input
+              type="text"
+              id="signUpEmail"
+              placeholder="Enter your email"
+              required
+            />
+            <i class="uil uil-envelope icon"></i>
+          </div>
+          <div class="input-field">
+            <input
+              type="password"
+              class="password"
+              id="signUpPassword"
+              placeholder="Create a password"
+              required
+            />
+            <i class="uil uil-lock icon"></i>
+          </div>
+          <div class="input-field">
+            <input
+              type="password"
+              class="password"
+              placeholder="Confirm a password"
+              required
+            />
+            <i class="uil uil-lock icon"></i>
+            <i class="uil uil-eye-slash showHidePw"></i>
+          </div>
+
+          <div class="input-field button">
+            <input name="signupBtn" type="button" value="Signup" />
+          </div>
+        </form>
+
+        <div class="login-signup">
+          <span class="text">Already a member?
+            <a href="#" class="text login-link">Login Now</a>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script src="script.js"></script>
