--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,8 +19,11 @@
     <nav>
     <a href="/">Home</a>
     <a href="/dashboard">Dashboard</a>
+    {{#if logged_in}}
+    <a href="/logout" id="logout">Logout</a>
+    {{else}}
     <a href="/login">Login</a>
-    <a href="/logout">Logout</a>
+    {{/if}}
     </nav>
 
 </header>
