fixed routes to post content and add new post

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,8 @@
+<main>
 {{#each posts as |post|}}
-{{> dashboard}}
+{{> dash-part}}
 {{/each}}
+</main>
 
 <button class="newPostbtn">Add New Post</button>
 
