fixed date to correct format

--- a/views/partials/dash-part.handlebars
+++ b/views/partials/dash-part.handlebars
@@ -3,7 +3,7 @@
         <div class="card-body p-0 border-dark">
         <div class="postHeader">
           <h5> <u> {{title}}</u></h5>
-          <p>Posted by {{username}} on {{date_created}}
+          <p>Posted by {{username}} on {{format_date date_created}}
           </p>
         </div>
           <p class="card-text p-3">{{content}}</p>
