--- a/views/partials/dash-part.handlebars
+++ b/views/partials/dash-part.handlebars
@@ -2,8 +2,8 @@
     <div class="card" style="width: 90%;">
         <div class="card-body p-0 border-dark">
         <div class="postHeader">
-          <h5> <u> {{title}}</u></h5>
-          <p>Posted by {{username}} on {{format_date date_created}}
+          <h5> <a href="/post/{{id}}">{{title}}</a></h5>
+          <p>Posted by {{user.username}} on {{format_date date_created}}
           </p>
         </div>
           <p class="card-text p-3">{{content}}</p>
